WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253761
MediaPlayerPrivateMediaStreamAVFObjC needs to stop double-hosting layers
https://bugs.webkit.org/show_bug.cgi?id=253761
Summary
MediaPlayerPrivateMediaStreamAVFObjC needs to stop double-hosting layers
Per Arne Vollan
Reported
2023-03-11 10:22:17 PST
MediaPlayerPrivateMediaStreamAVFObjC needs to stop double-hosting layers to allow for CARenderServer blocking
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2023-03-11 10:27:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11403
youenn fablet
Comment 2
2023-03-13 05:51:37 PDT
<
rdar://106576224
>
EWS
Comment 3
2023-03-15 13:25:55 PDT
Committed
261709@main
(ec2913e07923): <
https://commits.webkit.org/261709@main
> Reviewed commits have been landed. Closing PR #11403 and removing active labels.
Robert Jenner
Comment 4
2023-05-10 11:24:13 PDT
***
Bug 253009
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug