Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h
@@ -231,6 +231,9 @@ private:
 
     MediaStreamTrackPrivate* activeVideoTrack() const;
 
+    LayerHostingContextID hostingContextID() const final;
+    void setVideoInlineSizeFenced(const FloatSize&, const WTF::MachSendRight&) final;
+
     MediaPlayer* m_player { nullptr };
     RefPtr<MediaStreamPrivate> m_mediaStreamPrivate;
     RefPtr<VideoTrackPrivateMediaStream> m_activeVideoTrack;
