Source/WebKit/WebProcess/GPU/webrtc/SampleBufferDisplayLayer.h
@@ -51,6 +51,8 @@ public:
 
     void didReceiveMessage(IPC::Connection&, IPC::Decoder&) final;
 
+    LayerHostingContextID hostingContextID() const final { return m_hostingContextID; }
+
     using GPUProcessConnection::Client::weakPtrFactory;
     using GPUProcessConnection::Client::WeakValueType;
     using GPUProcessConnection::Client::WeakPtrImplType;
@@ -67,7 +69,7 @@ private:
     bool didFail() const final;
     void updateDisplayMode(bool hideDisplayLayer, bool hideRootLayer) final;
     void updateAffineTransform(CGAffineTransform) final;
-    void updateBoundsAndPosition(CGRect, WebCore::VideoFrameRotation) final;
+    void updateBoundsAndPosition(CGRect, WebCore::VideoFrameRotation, std::optional<WTF::MachSendRight>&&) final;
     void flush() final;
     void flushAndRemoveImage() final;
     void play() final;
@@ -91,6 +93,7 @@ private:
     bool m_paused { false };
 
     SharedVideoFrameWriter m_sharedVideoFrameWriter;
+    LayerHostingContextID m_hostingContextID { 0 };
 };
 
 }
